src/client/App.css
/* 
#c3965f
#f2ebe0
#cad1ce
#364a60
#1e2b3a
#6f7275
 */

* {
  margin: 0px;
  padding: 0px;
  font-family: Arial, Helvetica, sans-serif;
  box-sizing: border-box;
  overflow-x: hidden;
  color: #1e2b3a;
}

.App {
  display: flex;
  flex-direction: column;
}

.header {
  min-height: 16vh;
  width: 100vw;
  background-color: #cad1ce;
  top: 0px;
  font-size: 22pt;
  display: flex;
  justify-content: space-around;
  align-items: center;
}

.sub-header {
  display: flex;
  width: 75vw;
  justify-content: space-between;
  padding-right: 5px;
  min-height: 66px;
}

.head-spacer {
  width: 350px
}

.header-text {
  display: flex;
  justify-content: center;
  align-items: flex-end;
}

.blue-btn, .orange-btn, .btn  {
  border-radius: 6px;
  padding: 18px;
  font-size: 15pt;
  width: 350px;
  min-height: 63px;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: #cad1ce;
  text-decoration: none;
  color:#364a60;
}

.blue-btn {
  color: rgb(228, 228, 228);
  background-color: #1e2b3a;
}

.orange-btn {
  background-color: #c3965f;
  margin-top: 30px;
}

.inactive-btn {
  padding: 5px;
  /* border-radius: 5px; */
  background-color:#364a60;
  margin-top: 10px;
  border: none;
  border-left: 2px solid #cad1ce;
  border-right: 2px solid #cad1ce;
  color:#818181;
  cursor: pointer;
  padding-left: 15px;
  padding-right: 15px;
}


.welcome {
  min-height: 86vh;
  width: 100vw;
  background-color: #364a60;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  color: #cad1ce;
  padding-top: -50px;
  padding-bottom: 50px;
  gap: 20px;
}

.welcome_img {
  min-height: 550px;
}

.compthree {
  width: 100vw;
  background-color: #cad1ce;
  min-height: 50vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

.comp-three {
  display: flex;
  width: 65vw;
  gap: 150px;
}

.comp-three-text {
  font-weight: 100;
  font-size: 16pt;
  width: 75%;
  padding-top: 50px;
  padding-bottom: 50px;
  padding:25px;
}

.comp-three-title {
  display: flex;
  text-align: center;
  align-items: center;
}

.compFour {
  min-height: 95vh;
  width: 100vw;
  background-color: #364a60;
  display: flex;
  align-items: center;
  justify-content: center;
}

.comp-Four {
  display: flex;
  width: 75vw;
  align-items: center;
  height: 100%;
}

.fourTitle {
  color: #f2ebe0;
  height: 100%;
}

.navbar {
  display: flex;
  width: 100vw;
  min-height: 6vh;
  background-color: #cad1ce;
  justify-content: center;
}

.navUl {
  width: 75vw;
  display: flex;
  justify-content: flex-end;
  align-items: center;
  gap: 30px;
  padding-right: 20px;
  padding-bottom: 10px;
  height: 100%;
}

.li {
  width: fit-content;
  height: 23px;
  border-radius: 0px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.fourPar {
  margin-top: 15px;
}

h3 {
  text-align: center;
  font-weight: 100;
  /* width: 90%; */
  line-height: 1.5;
}

.billPageHeader {
  color:#cad1ce;
  font-size: 20pt;
  margin-top: 2vh;
}

h2 {
  margin-bottom: 20px;
  margin-top: -45px;
  color: #cad1ce;
}

h1 {
  font-size: 73px;
  font-weight: 200;
}

.compFour-text {
  width: 77%;
  color: #f2ebe0;
  height: 100%;
  text-align: left;
  padding-left: 15px;
}

.page {
  width: 100vw;
  min-height: 67vh;
  background-color: #364a60;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  flex-direction: column;
}

.auth-form, .reg-form {
  display: flex;
  flex-direction: column;
  border: 2px solid grey;
  padding: 25px;
  margin-top: 25px;
  border-radius: 5px;
  box-shadow: 0px 0px 2px 3px grey;
}

.reg-form {
  width: 50%;
  min-height: fit-content;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-evenly;
}

.form-input, .reg-form-input {
  min-height: 30px;
  margin-top: 1.5%;
  background-color: #364a60;
  color:#f2ebe0;
  font-size: 15pt;
  padding: 3px;
}

.reg-form-input {
  width: 35%;
}

.email {
  min-width: 80%;
}

.form-input:focus, .reg-form-input:focus {
  /* outline-color:grey; */
  outline: none;
}

.form-input::placeholder, .reg-form-input::placeholder {
  color:#cad1ce;
}

.badlogin {
  color: lightcoral;
  margin-top: 15px;
  font-size: 14pt;
  text-align: center;
}

.h6 {
  display: block;
  flex-direction: row;
}

a {
  text-decoration: none;
}

a:hover {
  scale: 1.01;
  cursor: pointer;
}

a:active {
  scale: 1;
}

li a:hover {
  margin-bottom: -1px;
  border-bottom: 1px solid black;
  scale: 1;
}

.testimonial {
  min-height: 79vh;
  display: flex;
  width: 100vw;
  background-color:#364a60;
  padding-top: 50px;
  padding-bottom: 50px;
}

.testimonial2 {
  background-color: #cad1ce;
}

.heart-puzzle {
  max-width: 40%;
}

.img_textHolder {
  display: flex;
  width: 100vw;
  padding: 30px;
  justify-content: space-evenly;
  align-items: center;
}

.text-box {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
  color: #cad1ce;
  margin-top: 0px;
  width: 37%;
}

.text {
  color:#cad1ce;
  margin-top: 5px;
}

.two {
  color:#1e2b3a
}

.accountPage {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  background-color: black;
}

.accountPageText {
  color:#c3965f;
  font-size: 36pt;
  margin-top: -200px;
}

.adminPage {
  display: flex;
  flex-direction: column;
  align-items: center;
  min-height: 82vh;
  background-color: #364a60;
}

.userCard {
  width: 45vw;
  min-height: 150px;
  border: 1px solid grey;
  margin: 10px;
  border-radius: 10px;
  padding: 10px;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 5px;
  background-color: #cad1ce;
}

.billing {
  min-height: 68vh;
  background-color:#364a60;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-evenly;

}

.billscontainer {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
}

.billdiv {
  height: 50px;
  background-color: #f2ebe0;
  width: 300px;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  border-radius: 25px;
  margin: 10px;
}

.backbtn .billdetail {
  padding-left: 10px;
  margin-top: 20px;  
  padding-bottom: 20px;
  background-color: #364a60;
}

.backbtn {
  position: absolute;
  color:#c3965f;
  font-size: 14pt;
}

.topBack {
  top: 10vh;
  left: 10px;
}

.bottomBack {
  position: relative;
  left: 10px;
  bottom: 5vh;
}

.billdetail {
  min-height: 68vh;
  background-color: #364a60;
}

.billdetail_admin {
  min-height: 82vh;
}

.billdetail_blur {
  filter: blur(4px);
}

.table {
  width: 100vw;
  display: flex;
  justify-content: center;
  align-items: center;
  min-height: auto;
  padding-bottom: 50px;
}

table {
  background-color: #cad1ce;
  padding: 100px;
  border-radius: 3px;
}

.bills_detail_table, .bills_detail, .bills_detail_head, .bills_detail_foot, .bills_detail_foottwo {
  border: 1px solid #818181;
  padding: 10px;
}

.bills_detail_head {
  border-bottom: 3px solid #818181;
  font-weight: bolder;
}

.bills_detail {
  width: 250px;
  height: 20px;
}

.bills_detail_foot {
  border: 3px double #818181;
  font-weight: bolder;
}

.bills_detail_foottwo {
  border: 4px double #818181;
  font-weight: bolder;
}

.add_charge {
  display: flex;
  justify-content: center;
  margin-top: -50px;
  padding-bottom: 50px;
}

.modalDiv {
  width: 100vw;
  height: 100vh;
  background-color: rgba(0, 0, 0, .8);
  z-index: 5;
  position: fixed;
  top: 0px;
  left: 0px;
  overflow-x: hidden;
  display: flex;
  justify-content: center;
  align-items: flex-start;
}

.add_charge_form {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 10%;
  min-width: 28vw;
  min-height: 40vh;
  border-radius: 10px;
  background-color:#364a60;
  margin-top: 22vh;
  position: fixed;
  z-index: 10;
  margin-left: 36vw;
  margin-right: auto;
  bottom: 40vh;
}

.amount {
  width: 150px;
}

.paid {
  background-color: aquamarine;
}

.unpaid {
  background-color: salmon;
}

.checkbox {
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  width: 75px;
  height: 100%;
}

.paid_save_btn {
  padding: 3px;
  background-color: #364a60;
  border-radius: 5px;
  color:#f2ebe0;
}

.closeModal {
  position: fixed;
  top: 9vh;
  right: 17px;
  color:#cad1ce;
  font-weight: bold;
  font-size: 17pt;
  z-index: 10;
}

.footer {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  min-height: 11vh;
  background-color: #1e2b3a;
}

.footerIcons {
  display: flex;
  flex-wrap: nowrap;
  min-width: 100px;
  min-height: 45px;
  justify-content: space-around;
  align-items: center;
}

.footerLinks {
  border-radius: 50%;
  width: 35px;
  height: 35px;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #cad1ce;
}
.footerLinks:hover {
  scale:1.03;
}

.spacer {
  width: 15vw;
}

.footer-text {
  color:#cad1ce
}

.edit_head {
  text-align: center;
}

.disabled {
  background-color: #a5a5a5;
  color:#b5b5b5;
}

